# telephony_sms_mms

./: BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  ohos.build
interfaces/kits/: BUILD.gn
interfaces/kits/include/: delivery_short_message_callback_stub.h  kit_short_message_hilog_wrap.h  send_short_message_callback_stub.h  short_message.h  short_message_manager.h  sms_kits_hilog_wrapper.h
interfaces/kits/js/declaration/: @ohos.telephony.sms.d.ts
interfaces/kits/js/napi/: BUILD.gn
interfaces/kits/js/napi/include/: delivery_callback.h  napi_sms.h  napi_util.h  send_callback.h
interfaces/kits/js/napi/src/: delivery_callback.cpp  napi_sms.cpp  napi_util.cpp  send_callback.cpp
interfaces/kits/src/: delivery_short_message_callback_stub.cpp  send_short_message_callback_stub.cpp  short_message.cpp  short_message_manager.cpp
interfaces/kits/test/: BUILD.gn  delivery_call_back.cpp  delivery_call_back.h  main.cpp  send_call_back.cpp  send_call_back.h
sa_profile/: 4008.xml  BUILD.gn
services/: sms_base_message.cpp  sms_cb_message.cpp  sms_cellbroadcast_handler.cpp  sms_interface_manager.cpp  sms_interface_stub.cpp  sms_misc_manager.cpp  sms_receive_handler.cpp  sms_receive_indexer.cpp  sms_receive_manager.cpp  sms_send_indexer.cpp  sms_send_manager.cpp  sms_sender.cpp  sms_service.cpp  sms_wap_push_handler.cpp  sms_wappush_handler.cpp
services/cdma/: cdma_sms_message.cpp  cdma_sms_pdu_codec.cpp  cdma_sms_receive_handler.cpp  cdma_sms_sender.cpp  cdma_sms_wap_push_handler.cpp  cdma_sms_wappush_handler.cpp
services/gsm/: gsm_sms_cb_handler.cpp  gsm_sms_message.cpp  gsm_sms_param_codec.cpp  gsm_sms_receive_handler.cpp  gsm_sms_sender.cpp  gsm_sms_tpdu_codec.cpp  gsm_sms_udata_codec.cpp  gsm_sms_wap_push_handler.cpp  gsm_sms_wappush_handler.cpp
services/include/: LICENSE  sms_base_message.h  sms_cb_message.h  sms_cellbroadcast_handler.h  sms_common.h  sms_hilog_wrapper.h  sms_interface_manager.h  sms_interface_stub.h  sms_misc_manager.h  sms_pdu_code_type.h  sms_receive_handler.h  sms_receive_indexer.h  sms_receive_manager.h  sms_send_indexer.h  sms_send_manager.h  sms_sender.h  sms_service.h  sms_wap_push_handler.h  sms_wappush_handler.h
services/include/cdma/: LICENSE  cdma_sms_message.h  cdma_sms_pdu_codec.h  cdma_sms_receive_handler.h  cdma_sms_sender.h  cdma_sms_types.h  cdma_sms_wap_push_handler.h  cdma_sms_wappush_handler.h
services/include/gsm/: LICENSE  gsm_pdu_code_type.h  gsm_sms_cb_handler.h  gsm_sms_message.h  gsm_sms_param_codec.h  gsm_sms_receive_handler.h  gsm_sms_sender.h  gsm_sms_tpdu_codec.h  gsm_sms_udata_codec.h  gsm_sms_wap_push_handler.h  gsm_sms_wappush_handler.h
test/: BUILD.gn
test/gtest/: sms_mms_gtest.cpp
test/sms_mms_gtest/: BUILD.gn  sms_mms_gtest.h
test/unittest/: BUILD.gn  gsm_sms_sender_test.cpp  gsm_sms_sender_test.h  short_message_test.cpp  short_message_test.h  sms_broadcast_subscriber.cpp  sms_broadcast_subscriber.h  sms_cb_message_test.cpp  sms_cb_message_test.h  sms_mms_test.cpp
utils/: LICENSE  msg_text_convert.cpp  msg_text_convert.h  sms_common_utils.cpp  sms_common_utils.h  string_utils.cpp  string_utils.h
