# GLIB - Library of useful routines for C programming
# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
SOURCE_DIR = "//base/telephony/sms_mms"

ohos_shared_library("tel_sms_mms") {
  sources = [
    "$SOURCE_DIR/services/cdma/cdma_sms_message.cpp",
    "$SOURCE_DIR/services/cdma/cdma_sms_pdu_codec.cpp",
    "$SOURCE_DIR/services/cdma/cdma_sms_receive_handler.cpp",
    "$SOURCE_DIR/services/cdma/cdma_sms_sender.cpp",
    "$SOURCE_DIR/services/gsm/gsm_sms_cb_handler.cpp",
    "$SOURCE_DIR/services/gsm/gsm_sms_message.cpp",
    "$SOURCE_DIR/services/gsm/gsm_sms_param_codec.cpp",
    "$SOURCE_DIR/services/gsm/gsm_sms_receive_handler.cpp",
    "$SOURCE_DIR/services/gsm/gsm_sms_sender.cpp",
    "$SOURCE_DIR/services/gsm/gsm_sms_tpdu_codec.cpp",
    "$SOURCE_DIR/services/gsm/gsm_sms_udata_codec.cpp",
    "$SOURCE_DIR/services/sms_base_message.cpp",
    "$SOURCE_DIR/services/sms_cb_message.cpp",
    "$SOURCE_DIR/services/sms_interface_manager.cpp",
    "$SOURCE_DIR/services/sms_interface_stub.cpp",
    "$SOURCE_DIR/services/sms_misc_manager.cpp",
    "$SOURCE_DIR/services/sms_receive_handler.cpp",
    "$SOURCE_DIR/services/sms_receive_indexer.cpp",
    "$SOURCE_DIR/services/sms_receive_manager.cpp",
    "$SOURCE_DIR/services/sms_send_indexer.cpp",
    "$SOURCE_DIR/services/sms_send_manager.cpp",
    "$SOURCE_DIR/services/sms_sender.cpp",
    "$SOURCE_DIR/services/sms_service.cpp",
    "$SOURCE_DIR/utils/msg_text_convert.cpp",
    "$SOURCE_DIR/utils/sms_common_utils.cpp",
    "$SOURCE_DIR/utils/string_utils.cpp",
    "//base/telephony/core_service/interfaces/innerkits/sms_mms/proxy/sms_delivery_short_message_proxy.cpp",
    "//base/telephony/core_service/interfaces/innerkits/sms_mms/proxy/sms_send_message_proxy.cpp",
    "//base/telephony/sms_mms/interfaces/kits/src/short_message.cpp",
  ]

  include_dirs = [
    "utils",
    "services/include",
    "services/include/cdma",
    "services/include/gsm",
    "//third_party/glib/glib",
    "//third_party/glib",
    "//third_party/glib/gmodule",
    "//base/telephony/core_service/interfaces/innerkits/sms_mms/proxy",
    "//base/telephony/core_service/interfaces/innerkits/sms_mms/common",
    "//base/telephony/core_service/interfaces/innerkits/common",
    "//base/telephony/sms_mms/interfaces/kits/include",
  ]

  deps = [
    "//base/telephony/core_service:tel_core_service",
    "//base/telephony/core_service/common:libtelephony_common",
    "//third_party/glib:glib_packages",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "aafwk_standard:want",
    "appexecfwk_standard:libeventhandler",
    "ces_standard:cesfwk_innerkits",
    "ces_standard:cesfwk_services",
    "ipc:ipc_core",
    "ril_adapter:hril",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"SMS_MMS\"",
    "LOG_DOMAIN = 0xD002B01",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "sms_mms"
  subsystem_name = "telephony"
}
