# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
SUBSYSTEM_DIR = "//base/telephony"
ohos_shared_library("telephony_sms") {
  include_dirs = [
    "//third_party/node/src",
    "$SUBSYSTEM_DIR/sms_mms/interfaces/kits/js/napi/include",
    "$SUBSYSTEM_DIR/sms_mms/interfaces/kits/include",
    "$SUBSYSTEM_DIR/sms_mms/services/include",
    "$SUBSYSTEM_DIR/sms_mms/services/include/gsm",
    "$SUBSYSTEM_DIR/sms_mms/services/include/cdma",
    "$SUBSYSTEM_DIR/sms_mms/utils",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/sms_mms/common",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/sms_mms/proxy",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/api",
    "$SUBSYSTEM_DIR/ril_adapter/interfaces/innerkits",
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/common",
  ]

  sources = [
    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/api/napi_util.cpp",
    "src/delivery_callback.cpp",
    "src/napi_sms.cpp",
    "src/send_callback.cpp",
  ]

  deps = [
    "$SUBSYSTEM_DIR/sms_mms:tel_sms_mms",
    "$SUBSYSTEM_DIR/sms_mms/interfaces/kits:tel_sms_mms_api",
    "//base/telephony/core_service/common:libtelephony_common",
    "//foundation/ace/napi:ace_napi",
    "//utils/native/base:utils",
  ]

  defines = [
    "TELEPHONY_LOG_TAG = \"SMS_MMS_API\"",
    "LOG_DOMAIN = 0xD002B01",
  ]

  external_deps = [
    "appexecfwk_standard:libeventhandler",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_L2:samgr_proxy",
  ]

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }
  relative_install_dir = "module"
  part_name = "sms_mms"
  subsystem_name = "telephony"
}
